--- a/lectures/260-2017-09-06-anatomy-II.html
+++ b/lectures/260-2017-09-06-anatomy-II.html
@@ -94,7 +94,7 @@
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2017-09-06 08:58:38</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2017-09-11 10:38:54</p>
           </hgroup>
   </slide>
 
@@ -890,6 +890,20 @@
 <li>Grey (interior) vs. white matter (exterior)</li>
 </ul></li>
 </ul>
+
+</article></slide><slide class=''><hgroup><h2></h2></hgroup><article >
+
+<div class="centered">
+<p><img src="https://www.nap.edu/openbook/0309095859/xhtml/images/p2000d3bdg31001.jpg" height=500px></p></div>
+
+<aside class='note'><section><p>Spinal cord cross section diagram.</p></section></aside>
+
+</article></slide><slide class=''><hgroup><h2></h2></hgroup><article >
+
+<div class="centered">
+<p><img src="https://media1.britannica.com/eb-media/75/2975-004-7891D6AA.jpg" height=550px></p></div>
+
+<aside class='note'><section><p>Spinal cord cross section.</p></section></aside>
 
 </article></slide><slide class=''><hgroup><h2>Organization of the PNS</h2></hgroup><article  id="organization-of-the-pns">
 
