Code to generate syllabus

--- a/lectures/260-2017-09-27-neurochem-II.html
+++ b/lectures/260-2017-09-27-neurochem-II.html
@@ -94,7 +94,7 @@
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2017-09-25 08:43:58</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2017-09-26 15:14:33</p>
           </hgroup>
   </slide>
 
@@ -141,25 +141,6 @@ Ca++</span></li>
 <li>Cl-</li>
 </ul>
 
-</article></slide><slide class=''><hgroup><h2>If the equilibrium potential for \(Cl^-\) is -75 mV and the membrane potential at rest is -70 mV, what will happen to \(Cl^-\) ions when a GABA-A channel opens?</h2></hgroup><article  id="if-the-equilibrium-potential-for-cl--is--75-mv-and-the-membrane-potential-at-rest-is--70-mv-what-will-happen-to-cl--ions-when-a-gaba-a-channel-opens">
-
-<ul>
-<li>Nothing</li>
-<li>\(Cl^-\) will flow out, deppolarizing the neuron</li>
-<li>\(Cl^-\) will flow in, hyperpolarizing the neuron</li>
-<li>\(Cl^-\) will flow in, depolarizing the neuron</li>
-</ul>
-
-</article></slide><slide class=''><hgroup><h2>If the equilibrium potential for \(Cl^-\) is -75 mV and the membrane potential at rest is -70 mV, what will happen to \(Cl^-\) ions when a GABA-A channel opens?</h2></hgroup><article  id="if-the-equilibrium-potential-for-cl--is--75-mv-and-the-membrane-potential-at-rest-is--70-mv-what-will-happen-to-cl--ions-when-a-gaba-a-channel-opens-1">
-
-<ul>
-<li>Nothing</li>
-<li>\(Cl^-\) will flow out, deppolarizing the neuron</li>
-<li><span class="red">
-\(Cl^-\) will flow in, hyperpolarizing the neuron</span></li>
-<li>\(Cl^-\) will flow in, depolarizing the neuron</li>
-</ul>
-
 </article></slide><slide class=''><hgroup><h2>This type of postsynaptic receptor does <strong>NOT</strong> contain its own ion channel.</h2></hgroup><article  id="this-type-of-postsynaptic-receptor-does-not-contain-its-own-ion-channel.">
 
 <ul>
@@ -177,19 +158,49 @@ Metabotropic</span></li>
 <li>Ligand-gated</li>
 </ul>
 
-<!-- ## Neurotransmiters -->
+</article></slide><slide class=''><hgroup><h2>Which neurotransmitter is released at the largest number of synapses in the CNS?</h2></hgroup><article  id="which-neurotransmitter-is-released-at-the-largest-number-of-synapses-in-the-cns">
 
-<!-- | Family      | Neurotansmitter                         | -->
+<ul>
+<li>Glutamate</li>
+<li>GABA</li>
+<li>Acetylcholine</li>
+<li>Dopamine</li>
+</ul>
 
-<!-- |-------------|-----------------------------------------| -->
+</article></slide><slide class=''><hgroup><h2>Which neurotransmitter is released at the largest number of synapses in the CNS?</h2></hgroup><article  id="which-neurotransmitter-is-released-at-the-largest-number-of-synapses-in-the-cns-1">
 
-<!-- | Amino acids | **Glutamate (Glu)**                     | -->
+<ul>
+<li><span class="red">
+Glutamate</span></li>
+<li>GABA</li>
+<li>Acetylcholine</li>
+<li>Dopamine</li>
+</ul>
 
-<!-- |             | **Gamma aminobutyric acid (GABA)**      | -->
+</article></slide><slide class=''><hgroup><h2>Neurotransmiters</h2></hgroup><article  id="neurotransmiters">
 
-<!-- |             | Glycine                               | -->
-
-<!-- |             | Aspartate                             | -->
+<table class = 'rmdtable'>
+<tr class="header">
+<th align="left">Family</th>
+<th align="left">Neurotansmitter</th>
+</tr>
+<tr class="odd">
+<td align="left">Amino acids</td>
+<td align="left"><strong>Glutamate (Glu)</strong></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"><strong>Gamma aminobutyric acid (GABA)</strong></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left">Glycine</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">Aspartate</td>
+</tr>
+</table>
 
 <!-- ## Glutamate -->
 
@@ -217,39 +228,55 @@ Metabotropic</span></li>
 
 <!-- | Metabotropic | mGlu       |                  | -->
 
-<!-- ## GABA -->
+</article></slide><slide class=''><hgroup><h2>GABA</h2></hgroup><article  id="gaba">
 
-<!-- - Primary inhibitory NT in CNS -->
+<ul>
+<li>Primary inhibitory NT in CNS <!-- - Excitatory in developing CNS, $[Cl^-]_{in}$ in >> $[Cl^-]_{out}$ --></li>
+<li>Binding sites for benzodiazepines (e.g., Valium), barbiturates, ethanol, etc.</li>
+</ul>
 
-<!-- - Excitatory in developing CNS, [Cl-] in >> [Cl-] out -->
+<table class = 'rmdtable'>
+<tr class="header">
+<th align="left">Type</th>
+<th align="left">Receptor</th>
+<th align="left">Esp Permeable to</th>
+</tr>
+<tr class="odd">
+<td align="left">Ionotropic</td>
+<td align="left"><strong>GABA-A</strong></td>
+<td align="left">Cl-</td>
+</tr>
+<tr class="even">
+<td align="left">Metabotropic</td>
+<td align="left"><strong>GABA-B</strong></td>
+<td align="left">K+</td>
+</tr>
+</table>
 
-<!-- - Binding sites for benzodiazepines (e.g., Valium), barbiturates, ethanol, etc. -->
+</article></slide><slide class=''><hgroup><h2>GABA</h2></hgroup><article  id="gaba-1" class="smaller">
 
-<!-- | Type         | Receptor   | Esp Permeable to | -->
+<div class="centered">
+<p>
 
-<!-- |--------------|------------|------------------| -->
+<a href="https://commons.wikimedia.org/wiki/File:GABAA-receptor-protein-example.png#/media/File:GABAA-receptor-protein-example.png"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/GABAA-receptor-protein-example.png/1200px-GABAA-receptor-protein-example.png" alt="GABAA-receptor-protein-example.png" width=450px></a><br>&quot;<a href="https://commons.wikimedia.org/wiki/File:GABAA-receptor-protein-example.png#/media/File:GABAA-receptor-protein-example.png">GABAA-receptor-protein-example</a>&quot; by <a href="//en.wikipedia.org/wiki/User:Chemgirl131" class="extiw" title="wikipedia:User:Chemgirl131">Chemgirl131</a> at <a href="//en.wikipedia.org/wiki/" class="extiw" title="wikipedia:">English Wikipedia</a> - Transferred from <span class="plainlinks">
+<a class="external text" href="http://en.wikipedia.org">en.wikipedia</a></span> to Commons by <a href="//commons.wikimedia.org/wiki/User:Sreejithk2000" title="User:Sreejithk2000">Sreejithk2000</a> using <a href="//tools.wmflabs.org/commonshelper/" class="extiw" title="toollabs:commonshelper/">CommonsHelper</a>.. Licensed under Public Domain via <a href="https://commons.wikimedia.org/wiki/">Commons</a>.
 
-<!-- | Ionotropic   | **GABA-A**     | Cl-              | -->
+</p></div>
 
-<!-- | Metabotropic | **GABA-B**     | K+            | -->
+</article></slide><slide class=''><hgroup><h2>Other amino acid NTs</h2></hgroup><article  id="other-amino-acid-nts">
 
-<!-- ## GABA -->
+<ul>
+<li><em>Glycine</em>
 
-<!-- <div class="centered"> -->
+<ul>
+<li>Spinal cord interneurons</li>
+</ul></li>
+<li><em>Aspartate</em>
 
-<!-- <p><a href="https://commons.wikimedia.org/wiki/File:GABAA-receptor-protein-example.png#/media/File:GABAA-receptor-protein-example.png"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/GABAA-receptor-protein-example.png/1200px-GABAA-receptor-protein-example.png" alt="GABAA-receptor-protein-example.png" width=450px></a><br>"<a href="https://commons.wikimedia.org/wiki/File:GABAA-receptor-protein-example.png#/media/File:GABAA-receptor-protein-example.png">GABAA-receptor-protein-example</a>" by <a href="//en.wikipedia.org/wiki/User:Chemgirl131" class="extiw" title="wikipedia:User:Chemgirl131">Chemgirl131</a> at <a href="//en.wikipedia.org/wiki/" class="extiw" title="wikipedia:">English Wikipedia</a> - Transferred from&nbsp;<span class="plainlinks"><a class="external text" href="http://en.wikipedia.org">en.wikipedia</a></span>&nbsp;to Commons&nbsp;by&nbsp;<a href="//commons.wikimedia.org/wiki/User:Sreejithk2000" title="User:Sreejithk2000">Sreejithk2000</a>&nbsp;using <a href="//tools.wmflabs.org/commonshelper/" class="extiw" title="toollabs:commonshelper/">CommonsHelper</a>.. Licensed under Public Domain via <a href="https://commons.wikimedia.org/wiki/">Commons</a>.</p> -->
-
-<!-- </div> -->
-
-<!-- ## Other amino acid NTs -->
-
-<!-- - *Glycine* -->
-
-<!--     + Spinal cord interneurons -->
-
-<!-- - *Aspartate* -->
-
-<!--     + Like Glu, stimulates NMDA receptor -->
+<ul>
+<li>Like Glu, stimulates NMDA receptor</li>
+</ul></li>
+</ul>
 
 </article></slide><slide class=''><hgroup><h2>Acetylcholine (ACh)</h2></hgroup><article  id="acetylcholine-ach">
 
